infrastructure/kube-prometheus-stack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stats.internal.fferrando.cc`)
      kind: Rule
      middlewares:
        - name: grafana-ui-deny-frame
      services:
        - name: kube-prometheus-stack-grafana
          port: 80

  tls:
    secretName: grafana-internal-tls
